workspace = { members = ["tokio-test"] }
[package]
name = "rust_tokio_with_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0",features = ["full", "tracing"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
bytes = "1.5.0"
tokio-stream = "0.1"